--- a/USC_Homework-13_D3-master/src/index.html
+++ b/USC_Homework-13_D3-master/src/index.html
@@ -41,7 +41,7 @@
 
  <!-- Footer-->
  <div id="footer">
-   <p>The Daily Beast&copy;2019</p>
+   <p>Jagnoor &copy;2021</p>
  </div>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
