--- a/D3Homework/basic mode/index.html
+++ b/D3Homework/basic mode/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>D3 Homework - Data Journalism and D3 </title>
+		<title>D3 Homework - Data Journalism and D3 - Basic Mode</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
