--- a/D3Homework/boss mode/index.html
+++ b/D3Homework/boss mode/index.html
@@ -9,7 +9,7 @@
 		<div class="chart">
 		</div>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js" integrity="sha512-a+/SD0dbGeXTN4AA5F1dDZqsPvXKKyS1bvU2z5ElpKNJ4xQlOMUs/1+suA+j+kj5nAAya+VmT5HUKZmazluxVQ==" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>    
   </body>
 </html>
